--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script> -->
    <link rel="stylesheet" href="styles.css">
-   <script src="script.js" defer></script>
+   <script type="module" src="script.js" defer></script>
    <script src="https://kit.fontawesome.com/9e560ee8e6.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -42,7 +42,7 @@
 
    </section>
 
-   <section id="githubSection" style="background-color: violet;">
+   <section id="githubSection" style="background-color: #020408;">
       <h1>Mina repon</h1>
       <div id="githubContainer">
 
