--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
    <title>Vilhelm Fontell</title>
    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script> -->
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="/css/mainStyles.css">
+   <link rel="stylesheet" href="/css/githubStyles.css">
+   <link rel="stylesheet" href="/css/experienceStyles.css">
    <script type="module" src="script.js" defer></script>
    <script src="https://kit.fontawesome.com/9e560ee8e6.js" crossorigin="anonymous"></script>
 </head>
@@ -39,14 +41,16 @@
    </section>
 
    <section id="experienceSection" style="background-color: green;">
-
+      <h1>Min erfarenhet</h1>
+      <div id="experienceContainer">
+         <!-- <div id="workContainer"></div>
+         <div id="educationContainer"></div> -->
+      </div>
    </section>
 
    <section id="githubSection" style="background-color: #020408;">
       <h1>Mina repon</h1>
-      <div id="githubContainer">
-
-      </div>
+      <div id="githubContainer"></div>
    </section>
 
    <section id="contactSection" style="background-color: yellow;">
