lade till val på cv-sida

--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
 
    <section id="experienceSection" style="background-color: green;">
       <h1>Min erfarenhet</h1>
+      <p>Visa som:</p>
+      <div id="radioDiv">
+         <input type="radio" id="timelineRadio" name="viewSelection" checked>
+         <label for="timelineRadio">Tidslinje</label>
+         <input type="radio" id="listRadio" name="viewSelection">
+         <label for="listRadio">Lista</label>
+      </div>
       <div id="experienceContainer">
-         <!-- <div id="workContainer"></div>
-         <div id="educationContainer"></div> -->
       </div>
    </section>
 
