fixade trasig länk

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="css/mainStyles.css">
    <link rel="stylesheet" href="css/githubStyles.css">
    <link rel="stylesheet" href="css/experienceStyles.css">
-   <link rel="icon" type="image/png" href="/images/vf.png" sizes="512x512">
+   <link rel="icon" type="image/png" href="images/vf.png" sizes="512x512">
    <script type="module" src="script.js" defer></script>
    <script src="https://kit.fontawesome.com/9e560ee8e6.js" crossorigin="anonymous"></script>
 </head>
