--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
    <section id="introTextSection" style="background-color: #1A1A1A;">
       <p id="introText">
-         Jag heter Vilhelm och jag är en webbutvecklingsstudent baserad i Jönköping. Det viktigaste för mig är att alltid tänka kreativt och att alltid försöka lära mig mer, och jag tror att man genom att göra det kan lösa alla problem som finns. Jag vill bygga webbapplikationer som både <span style="color: #FF3A0E;">förenklar</span> och <span style="color: #FF3A0E;">förbättrar</span> människors liv, sådana man i efterhand undrar hur man har kunnat klara sig utan.</section>
+         Jag heter Vilhelm och jag är en webbutvecklingsstudent baserad i Jönköping. Det viktigaste för mig är att alltid tänka kreativt och att alltid försöka lära mig mer, och jag tror att man genom att göra det kan lösa alla problem som finns. Jag vill bygga webbapplikationer som både förenklar och förbättrar människors liv, sådana man i efterhand undrar hur man har kunnat klara sig utan.</section>
 
    <section id="experienceSection" style="background-color: #fff9e2;">
       <h1>Vad jag har gjort</h1>
